--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -4,12 +4,23 @@
     <h3>Create Account</h3>
     <form action="/signup" method="post">
         <input type="text" class="form-control" name="username" placeholder="Username">
+        
         <input type="email" class="form-control" name="email" placeholder="E-mail">
         <input type="password" class="form-control" name="password" placeholder="Password">
         <input type="password" class="form-control" name="confirmPassword" placeholder="Confirm Password">
         <input type="submit" value="Create Account" class="btn btn-primary">
     </form>
-    <br>
+    <% if(authError != '') { %>
+        <br>
+        <p class="alert alert-danger">
+            <%= authError %>
+        </p>
+    <% } %>
+    <% for(let error of validationErrors) { %>
+        <p class="alert alert-danger">
+            <%= error.msg %>
+        </p>
+    <% } %>
     <div>
         Already have an account? <a href="/login">Login</a>
     </div>
