--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,9 @@
                         </h5>
                         <form action="/cart" method="post">
                             <input type="number" name="amount" class="form-control">
+                            <input type="hidden" name="name" value="<%= product.name %>">
+                            <input type="hidden" name="price" value="<%= product.price %>">
+                            <input type="hidden" name="productId" value="<%= product._id %>">
                             <input type="submit" value="Add to cart" class="btn btn-primary">
                         </form>
                     </div>
