--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -26,7 +26,7 @@
                             <td style="border: 1px solid black; padding: 8px;">
                                 <input type="hidden" name="cartId" value="<%= items[i]._id %>">
                                 <input type="submit" class="btn btn-success" value="Save" formaction="/cart/save">
-                                <input type="submit"  class="btn btn-success" value="Order" formaction="order">
+                                <input type="submit"  class="btn btn-success" value="Order" formaction="/cart/order">
                                 <input type="submit" class="btn btn-danger" value="Delete" formaction="/cart/delete">
                             </td>
                         </form>
@@ -34,10 +34,10 @@
                 <% } %>
             </tbody>
         </table>
-    <form method="post">
-        <input type="submit"  class="btn btn-success" value="Order All" formaction="/orderAll">
-        <input type="submit" class="btn btn-danger" value="Delete All" formaction="/cart/deleteAll">
-    </form>
+        <form method="post">
+            <input type="submit" class="btn btn-success" value="Order All" formaction="/cart/orderAll">
+            <input type="submit" class="btn btn-danger" value="Delete All" formaction="/cart/deleteAll">
+        </form>
     <% } %>
     <% if(validationErrors) { %>
         <% for(let err of validationErrors) { %>
