--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -35,8 +35,8 @@
             </tbody>
         </table>
         <form method="post">
-            <input type="submit" class="btn btn-success" value="Order All" formaction="/cart/orderAll">
-            <input type="submit" class="btn btn-danger" value="Delete All" formaction="/cart/deleteAll">
+            <input type="submit" class="btn btn-success" value="Order All" formaction="/cart/address">
+            <input type="submit" class="btn btn-danger" value="Delete All" formaction="/cart/address">
         </form>
     <% } %>
     <% if(validationErrors) { %>
