--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -24,11 +24,11 @@
                             <td style="border: 1px solid black; padding: 8px;"> <input type="text" name="amount" class="form-control" value="<%= items[i].amount %>"></td>
                         </form>
                     </tr>
-                <% } %>
-                <td style="border: 1px solid black; padding: 8px;"> <%= cost %> $ </td>
-                <td style="border: 1px solid black; padding: 8px;"> <%= address %> $ </td>
-                <td style="border: 1px solid black; padding: 8px;"> <%= status %> $ </td>
+                                    <td style="border: 1px solid black; padding: 8px;"> <%= cost %> $ </td>
+                <td style="border: 1px solid black; padding: 8px;"> <%= items[i].address %> $ </td>
+                <td style="border: 1px solid black; padding: 8px;"> <%= items[i].status %> $ </td>
                 <td style="border: 1px solid black; padding: 8px;"> <%= time %> $ </td>
+                <% } %>
             </tbody>
         </table>
     <% } %>
