--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/admin/add">Add Pridct</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/admin/orders">Manage Orders</a>
+          <a class="nav-link" href="/orders">Manage Orders</a>
         </li>
       </ul>
       <% if(isUser){ %>
