--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
 <div class="container text-center">
     <h3>Login</h3>
     <form action="/login" method="post">
-        <input type="email" class="form-control" name="email" placeholder="E-mail">
+        <input type="text" class="form-control" name="email" placeholder="E-mail">
         <input type="password" class="form-control" name="password" placeholder="Password">
         <br><input type="submit" value="Login" class="btn btn-primary">
     </form>
