--- a/views/parts/navbar.ejs
+++ b/views/parts/navbar.ejs
@@ -26,7 +26,7 @@
         <% } %>
         <% if(isAdmin) { %>
           <li class="nav-item">
-            <a class="nav-link" href="/admin/add">Add Pridct</a>
+            <a class="nav-link" href="/admin/add">Add Product</a>
           </li>
         <% } %>
       </ul>
